fix: add horizontal scroll

--- a/src/css/components/carousel.css
+++ b/src/css/components/carousel.css
@@ -16,7 +16,8 @@
 
   margin-right: -24px;
 
-  cursor: pointer;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
 }
 
 .carousel-item {
